<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="288dp"
    android:paddingTop="20dp"
    android:background="@drawable/custom_activity_popup_background"
    android:layout_height="144dp">

    <TextView
        android:layout_marginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sentence_delete"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_marginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="예문을 삭제하시겠습니까?"
        android:textSize="16sp"
        android:textColorHint="@color/colorTextHint"
        />

    <LinearLayout
        android:layout_marginTop="26dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_sentence_dialog_delete_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorDamoyoungBlue"
            android:layout_marginEnd="24dp"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/tv_sentence_dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorDamoyoungBlue"
            android:layout_marginEnd="24dp"
            android:text="@string/delete"/>
    </LinearLayout>


</LinearLayout>