<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_bookmark_folder_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_folder_black" />

    <TextView
        android:id="@+id/tv_bookmark_folder_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/history"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_bookmark_folder_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="4dp"
        android:onClick="onClick"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:text="@string/modify"
        android:textColor="@color/colorDamoyoungText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_bookmark_folder_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="onClick"
        android:layout_marginStart="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="8dp"
        android:text="@string/delete"
        android:textColor="@color/colorDamoyoungText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

</LinearLayout>