<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDamoyoungWhite">

    <RelativeLayout
        android:background="@color/colorDamoyoungWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        >
        <ImageView
            android:id="@+id/iv_history_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onClick"
            app:srcCompat="@drawable/ic_arrow_back"/>

        <TextView
            android:background="@color/colorDamoyoungWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/history"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="14dp"
            android:textSize="18sp" />


    </RelativeLayout>

    <ListView
        android:id="@+id/lv_bookmark_history"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/up_shadow" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_bookmark_history_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:onClick="onClick"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/delete"
            android:textColor="@color/colorDamoyoungText"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />
        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/tv_bookmark_history_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:onClick="onClick"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/edit"
            android:textColor="@color/colorDamoyoungText"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_bookmark_history_all_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="24dp"
            android:onClick="onClick"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/allSelect"
            android:textColor="@color/colorDamoyoungText"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_bookmark_history_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:onClick="onClick"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/confirm"
            android:textColor="@color/colorDamoyoungText"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>